// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders content 1`] = `
.emotion-0 {
  display: block;
  border-radius: 1px;
  border: solid 1px rgba(46,91,255,0.08);
  box-shadow: 0 10px 20px 0 rgba(46,91,255,0.07);
  margin: 12px;
  padding: 32px 24px;
  background-color: #fff;
}

<div>
  <div
    class="emotion-0"
    data-testid="card"
  >
    The SMS program is down, synthesize the redundant feed so we can synthesize the SQL hard drive!
  </div>
</div>
`;

exports[`Card renders content with heading 1`] = `
.emotion-0 {
  display: block;
  border-radius: 1px;
  border: solid 1px rgba(46,91,255,0.08);
  box-shadow: 0 10px 20px 0 rgba(46,91,255,0.07);
  margin: 12px;
  padding: 32px 24px;
  background-color: #fff;
}

.emotion-1 {
  margin: 0 0 26px 0;
  color: #8798ad;
  font-size: 0.8666666666666667em;
  font-weight: 400;
  letter-spacing: 1.2px;
  text-transform: uppercase;
}

<div>
  <div
    class="emotion-0"
    data-testid="card"
  >
    <h3
      class="emotion-1"
      data-testid="card-heading"
    >
      You can't input the array without navigating the redundant GB alarm!
    </h3>
    You can't quantify the interface without parsing the neural ADP feed!
  </div>
</div>
`;
